--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">ManageU</string>
     <string name="title_activity_main2">Main2Activity</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-
     <!--    fragment placeholders-->
     <string name="dashboard_fragment">Dashboard fragment</string>
     <string name="tasks_fragment">Tasks fragment</string>
@@ -13,5 +11,8 @@
     <string name="dashboard_title">Dashboard</string>
     <string name="task_title">Tasks</string>
     <string name="stats_title">Stats</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
